--- a/Godot-Eskills/src/main/AndroidManifest.xml
+++ b/Godot-Eskills/src/main/AndroidManifest.xml
@@ -8,4 +8,10 @@
             android:value="com.massadas.godot_eskills.Eskills" />
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW"/>
+        </intent>
+    </queries>
+
 </manifest>
