--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,19 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath 'com.android.tools.build:gradle:4.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+allprojects {
+    repositories {
+        google()
+        jcenter()
 
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
