--- a/Godot-Eskills/src/main/AndroidManifest.xml
+++ b/Godot-Eskills/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application>
         <meta-data
             android:name="org.godotengine.plugin.v1.GodotEskills"
-            android:value="com.massadas.godot_eskills.Eskills" />
+            android:value="com.massadas.godot_eskills.GodotEskills" />
     </application>
 
     <queries>
