--- a/Godot-Eskills/build.gradle
+++ b/Godot-Eskills/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     compileOnly files('libs/godot-lib.3.4.stable.release.aar')
 }
