--- a/Godot-Eskills/src/main/AndroidManifest.xml
+++ b/Godot-Eskills/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.massadas.godot_eskills">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         <meta-data
             android:name="org.godotengine.plugin.v1.GodotEskills"
